deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udpchat
  labels:
    name: udpchat
